--- a/Hosee/Hosee/Base.lproj/History.storyboard
+++ b/Hosee/Hosee/Base.lproj/History.storyboard
@@ -78,10 +78,10 @@
                                                     </constraints>
                                                 </view>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nhd-pZ-wwl">
-                                                    <rect key="frame" x="8" y="123.5" width="343" height="96.5"/>
+                                                    <rect key="frame" x="8" y="123.5" width="343" height="48"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HVu-OQ-h5P">
-                                                            <rect key="frame" x="0.0" y="24.5" width="230.5" height="48"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="230.5" height="48"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Dlb-Im-hwA" userLabel="personST">
                                                                     <rect key="frame" x="0.0" y="0.0" width="230.5" height="20"/>
@@ -126,7 +126,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="VND 00.000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4hF-Qb-XnD">
-                                                            <rect key="frame" x="238.5" y="37.5" width="104.5" height="21.5"/>
+                                                            <rect key="frame" x="238.5" y="13.5" width="104.5" height="21.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                             <color key="textColor" red="0.0" green="0.68627450980392157" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -134,7 +134,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DXr-wK-l8h" customClass="RatingControl" customModule="Hosee" customModuleProvider="target">
-                                                    <rect key="frame" x="199" y="220" width="152" height="24"/>
+                                                    <rect key="frame" x="199" y="171.5" width="152" height="72.5"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </stackView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a0Z-bV-pEh" userLabel="PromoView" customClass="View" customModule="Hosee" customModuleProvider="target">
@@ -255,6 +255,9 @@
                     <navigationItem key="navigationItem" title="History" id="hqm-4N-1MT">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="back_arrow" id="Qap-Fq-XVP">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="backButton:" destination="zRe-Nz-paW" id="w6L-cF-rq5"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
@@ -297,7 +300,7 @@
         <!--Navigation Controller-->
         <scene sceneID="ggC-DU-HDl">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lB9-ct-dfK" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="History" automaticallyAdjustsScrollViewInsets="NO" id="lB9-ct-dfK" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="sqR-sF-Y8R">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
