--- a/Hosee/Hosee/Base.lproj/Home.storyboard
+++ b/Hosee/Hosee/Base.lproj/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2aA-2i-l8A">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -101,6 +101,7 @@
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
                                                     <action selector="onClickPromoteButton:" destination="3kV-2B-oKj" eventType="touchUpInside" id="9r2-Nf-4nv"/>
+                                                    <segue destination="5Zj-Px-UtD" kind="show" id="91O-GQ-x5s"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aIa-1r-Yhb">
@@ -165,6 +166,7 @@
                         <viewLayoutGuide key="safeArea" id="0gt-Fn-PcI"/>
                     </view>
                     <navigationItem key="navigationItem" id="sXG-cl-qOy">
+                        <barButtonItem key="backBarButtonItem" title=" " id="XSD-Y5-mz0"/>
                         <barButtonItem key="leftBarButtonItem" title="Item" image="LeflSlide" id="tvD-T8-a4z">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -200,6 +202,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CoR-nJ-Us5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="596" y="109.29535232383809"/>
+        </scene>
+        <!--Promotion-->
+        <scene sceneID="CTA-zY-ERE">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Promotion" referencedIdentifier="Promotion" id="5Zj-Px-UtD" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CpS-he-myN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2194" y="-22"/>
         </scene>
         <!--booking-->
         <scene sceneID="Vpm-WY-TUR">
