--- a/Hosee/Hosee/Login.storyboard
+++ b/Hosee/Hosee/Login.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QuH-n2-GfZ" customClass="Button" customModule="Hosee" customModuleProvider="target">
-                                <rect key="frame" x="32" y="495.5" width="311" height="40"/>
+                                <rect key="frame" x="32" y="530.5" width="311" height="40"/>
                                 <color key="backgroundColor" red="0.1170010977" green="0.1987133868" blue="0.38296809679999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="3XP-wL-EgD"/>
@@ -32,7 +32,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="p03-oO-NBq" userLabel="Stack View PhoneNumber">
-                                <rect key="frame" x="16" y="326.5" width="343" height="63"/>
+                                <rect key="frame" x="16" y="361.5" width="343" height="63"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SỐ ĐIỆN THOẠI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuj-98-vZw">
                                         <rect key="frame" x="121" y="0.0" width="101.5" height="17"/>
@@ -49,7 +49,7 @@
                                                     <constraint firstAttribute="width" constant="35" id="bYE-mX-CqV"/>
                                                 </constraints>
                                             </imageView>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="+84604915863" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="feq-cy-eYb">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="feq-cy-eYb">
                                                 <rect key="frame" x="110" y="6" width="193" height="23"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="23" id="erW-dy-NQN"/>
@@ -109,15 +109,24 @@
                                     <constraint firstItem="6uU-kP-35K" firstAttribute="top" secondItem="cuj-98-vZw" secondAttribute="bottom" constant="6" id="TJs-pa-y52"/>
                                 </constraints>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logom" translatesAutoresizingMaskIntoConstraints="NO" id="bts-vL-yKA">
-                                <rect key="frame" x="19.5" y="39.5" width="336" height="255"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sW9-1h-jll">
+                                <rect key="frame" x="0.0" y="20" width="375" height="333.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logom" translatesAutoresizingMaskIntoConstraints="NO" id="bts-vL-yKA">
+                                        <rect key="frame" x="37.5" y="17" width="300" height="300"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="bts-vL-yKA" secondAttribute="height" id="e1z-ab-5dz"/>
+                                            <constraint firstAttribute="width" constant="300" id="o9W-nl-Ve3"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="336" id="68u-TH-RgQ"/>
-                                    <constraint firstAttribute="height" constant="255" id="HxU-2D-HqA"/>
+                                    <constraint firstItem="bts-vL-yKA" firstAttribute="centerY" secondItem="sW9-1h-jll" secondAttribute="centerY" id="lSx-FJ-cxy"/>
+                                    <constraint firstItem="bts-vL-yKA" firstAttribute="centerX" secondItem="sW9-1h-jll" secondAttribute="centerX" id="odp-ok-Zsa"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jor-LY-DCH" userLabel="Stack View Password">
-                                <rect key="frame" x="16" y="397.5" width="343" height="66"/>
+                                <rect key="frame" x="16" y="432.5" width="343" height="66"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MẬT KHẨU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOz-3n-0ol">
                                         <rect key="frame" x="133.5" y="0.0" width="76" height="18"/>
@@ -165,13 +174,13 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="------  HOẶC  ------" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcW-ov-Qle">
-                                <rect key="frame" x="138" y="551.5" width="99" height="12"/>
+                                <rect key="frame" x="138" y="586.5" width="99" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="qcT-X3-ZVz">
-                                <rect key="frame" x="85" y="595.5" width="205" height="28"/>
+                                <rect key="frame" x="85" y="630.5" width="205" height="28"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bạn chưa có tài khoản?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ca-As-3Fe">
                                         <rect key="frame" x="0.0" y="0.0" width="141" height="28"/>
@@ -190,9 +199,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="jor-LY-DCH" firstAttribute="leading" secondItem="FuV-dh-775" secondAttribute="leading" constant="16" id="2eB-6K-HU9"/>
-                            <constraint firstItem="bts-vL-yKA" firstAttribute="centerX" secondItem="57D-Qm-q0S" secondAttribute="centerX" id="5og-rE-wIn"/>
+                            <constraint firstItem="p03-oO-NBq" firstAttribute="top" secondItem="sW9-1h-jll" secondAttribute="bottom" constant="8" id="6dE-Gj-ulx"/>
+                            <constraint firstItem="sW9-1h-jll" firstAttribute="height" secondItem="57D-Qm-q0S" secondAttribute="height" multiplier="1/2" id="GX8-hj-Ika"/>
                             <constraint firstItem="QuH-n2-GfZ" firstAttribute="top" secondItem="jor-LY-DCH" secondAttribute="bottom" constant="32" id="JgM-OT-9jC"/>
                             <constraint firstItem="QuH-n2-GfZ" firstAttribute="leading" secondItem="FuV-dh-775" secondAttribute="leading" constant="32" id="NP4-Uc-u7M"/>
+                            <constraint firstItem="sW9-1h-jll" firstAttribute="leading" secondItem="FuV-dh-775" secondAttribute="leading" id="SJ2-bd-s4B"/>
                             <constraint firstItem="qcT-X3-ZVz" firstAttribute="top" secondItem="OcW-ov-Qle" secondAttribute="bottom" constant="32" id="TX8-gI-xdb"/>
                             <constraint firstItem="p03-oO-NBq" firstAttribute="centerX" secondItem="57D-Qm-q0S" secondAttribute="centerX" id="XUN-Mr-qZg"/>
                             <constraint firstItem="p03-oO-NBq" firstAttribute="leading" secondItem="FuV-dh-775" secondAttribute="leading" constant="16" id="XUb-1w-D0K"/>
@@ -201,12 +212,16 @@
                             <constraint firstItem="OcW-ov-Qle" firstAttribute="top" secondItem="QuH-n2-GfZ" secondAttribute="bottom" constant="16" id="cJT-PG-7Kl"/>
                             <constraint firstItem="OcW-ov-Qle" firstAttribute="centerX" secondItem="57D-Qm-q0S" secondAttribute="centerX" id="ebM-S8-1EV"/>
                             <constraint firstItem="jor-LY-DCH" firstAttribute="top" secondItem="p03-oO-NBq" secondAttribute="bottom" constant="8" id="kKh-LX-PLD"/>
-                            <constraint firstItem="bts-vL-yKA" firstAttribute="centerY" secondItem="57D-Qm-q0S" secondAttribute="centerY" multiplier="1/2" id="msL-u7-PGT"/>
                             <constraint firstItem="QuH-n2-GfZ" firstAttribute="centerX" secondItem="57D-Qm-q0S" secondAttribute="centerX" id="pUc-hy-1Bc"/>
-                            <constraint firstItem="p03-oO-NBq" firstAttribute="top" secondItem="bts-vL-yKA" secondAttribute="bottom" constant="32" id="vDd-Hn-84H"/>
+                            <constraint firstItem="FuV-dh-775" firstAttribute="trailing" secondItem="sW9-1h-jll" secondAttribute="trailing" id="ptR-PW-8rA"/>
+                            <constraint firstItem="sW9-1h-jll" firstAttribute="top" secondItem="FuV-dh-775" secondAttribute="top" id="yRd-7y-Fgm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FuV-dh-775"/>
                     </view>
+                    <connections>
+                        <outlet property="passWordLabel" destination="dOz-3n-0ol" id="VhY-1M-lFI"/>
+                        <outlet property="phoneNumberLabel" destination="feq-cy-eYb" id="DE4-bg-gfZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yWp-Rn-lf2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
