login Screen fine

--- a/Hosee/Hosee/Login.storyboard
+++ b/Hosee/Hosee/Login.storyboard
@@ -125,8 +125,30 @@
                                     <constraint firstItem="bts-vL-yKA" firstAttribute="centerX" secondItem="sW9-1h-jll" secondAttribute="centerX" id="odp-ok-Zsa"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="------  HOẶC  ------" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcW-ov-Qle">
+                                <rect key="frame" x="138" y="586.5" width="99" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="qcT-X3-ZVz">
+                                <rect key="frame" x="85" y="630.5" width="205" height="28"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bạn chưa có tài khoản?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ca-As-3Fe">
+                                        <rect key="frame" x="0.0" y="0.0" width="141" height="28"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CXC-cg-YRf">
+                                        <rect key="frame" x="147" y="0.0" width="58" height="28"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="ĐĂNG KÝ"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jor-LY-DCH" userLabel="Stack View Password">
-                                <rect key="frame" x="16" y="432.5" width="343" height="66"/>
+                                <rect key="frame" x="16" y="432" width="343" height="66"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MẬT KHẨU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOz-3n-0ol">
                                         <rect key="frame" x="133.5" y="0.0" width="76" height="18"/>
@@ -173,28 +195,6 @@
                                     <constraint firstItem="poM-py-eiN" firstAttribute="centerX" secondItem="jor-LY-DCH" secondAttribute="centerX" id="bGS-cQ-3tA"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="------  HOẶC  ------" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcW-ov-Qle">
-                                <rect key="frame" x="138" y="586.5" width="99" height="12"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="qcT-X3-ZVz">
-                                <rect key="frame" x="85" y="630.5" width="205" height="28"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bạn chưa có tài khoản?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ca-As-3Fe">
-                                        <rect key="frame" x="0.0" y="0.0" width="141" height="28"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CXC-cg-YRf">
-                                        <rect key="frame" x="147" y="0.0" width="58" height="28"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <state key="normal" title="ĐĂNG KÝ"/>
-                                    </button>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -219,7 +219,7 @@
                         <viewLayoutGuide key="safeArea" id="FuV-dh-775"/>
                     </view>
                     <connections>
-                        <outlet property="passWordLabel" destination="dOz-3n-0ol" id="VhY-1M-lFI"/>
+                        <outlet property="passWordLabel" destination="Wij-6h-T90" id="gIC-xy-rwB"/>
                         <outlet property="phoneNumberLabel" destination="feq-cy-eYb" id="DE4-bg-gfZ"/>
                     </connections>
                 </viewController>
